src/objects/PLCToCase__c.object
<CustomObject>
    <description>This object is used for WRF-POLK.  Junction object between PLC Jobs and Cases.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK. Junction object between PLC Jobs and Cases.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case CARs</relationshipLabel>
        <relationshipName>CARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLCJob__c</fullName>
        <description>This field is used for WRF-POLK. Junction object between PLC Jobs and Cases.</description>
        <label>PLC Job</label>
        <referenceTo>PLCJob__c</referenceTo>
        <relationshipLabel>Case CARs</relationshipLabel>
        <relationshipName>CARs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PLCProductionTeam__c</fullName>
        <description>This field is used for WRF-POLK. Junction object between PLC Jobs and Cases.</description>
        <formula>Text(PLCJob__r.Team1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLC Production Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLCProgrammer__c</fullName>
        <description>This field is used for WRF-POLK. Junction object between PLC Jobs and Cases.</description>
        <formula>PLCJob__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLC Programmer</label>
        <type>Text</type>
    </fields>
    <label>Case CAR</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>CAR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case CARs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>